--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 ul {
@@ -133,7 +132,7 @@ ul {
 
 /* Our preference */
 
-.preference {
+.hidden-tittle {
   display: none;
 }
 
