--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@ ul {
   padding-left: 0;
 }
 
+img {
+  display: block
+}
+
 .list {
   list-style-type: none;
 }
@@ -80,6 +84,7 @@ ul {
   text-transform: uppercase;
   text-decoration: none;
   color: var(--second-logo-color);
+  margin-right: 76px;
 }
 
 .link-studio {
@@ -89,7 +94,6 @@ ul {
 .nav-list {
   display: flex;
   gap: 40px;
-  margin-left: 76px;
 }
 
 .nav-link {
@@ -98,6 +102,7 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  padding: 24px 0
 }
 
 .nav-link:hover,
@@ -169,6 +174,9 @@ ul {
   letter-spacing: 0.04em;
   cursor: pointer;
   padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
 }
 
 .hero-btn:hover,
@@ -179,13 +187,13 @@ ul {
 /* Our preference */
 
 .pref-section {
-  margin: 120px 0;
+  padding: 120px 0;
 }
 
 .container-pref {
 }
 
-.hidden-tittle {
+.visually-hidden {
   display: none;
 }
 
@@ -208,6 +216,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  margin-bottom: 8px;
 }
 
 .pref-text {
@@ -223,7 +232,7 @@ ul {
 }
 
 .about-section {
-  margin-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .about {
@@ -234,7 +243,7 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--secondary-color);
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .about-list {
@@ -260,7 +269,7 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--secondary-color);
-  padding-bottom: 72px;
+  margin-bottom: 72px;
   text-align: center;
 }
 
@@ -275,7 +284,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
-  padding-bottom: 8px;
+  margin-bottom: 8px
 }
 
 .team-position {
@@ -338,14 +347,14 @@ ul {
 
 /* Filter */
 
-.filter-title {
+.visually-hidden {
   display: none;
 }
 
 .filter-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 76px;
+  margin-bottom: 72px;
   justify-content: center;
   align-items: center;
 }
@@ -382,14 +391,14 @@ ul {
 }
 
 .category-item {
-  padding-right: 24px;
-  padding-bottom: 48px;
+  margin-right: 24px;
+  margin-bottom: 48px;
 }
 
 .app-box {
 	border: 1px solid #e7e9fc;
 	border-top: none;
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .portfolio-name {
@@ -398,7 +407,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
-	padding-bottom: 8px;
+	margin-bottom: 8px;
   padding-left: 16px;
 }
 
@@ -411,13 +420,22 @@ ul {
 }
 
 .category-item:nth-child(3) {
-  padding-right: 0;
+  margin-right: 0;
 }
 
 .category-item:nth-child(6) {
-  padding-right: 0;
+  margin-right: 0;
 }
 
 .category-item:nth-child(9) {
-  padding-right: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.category-item:nth-child(8) {
+margin-bottom: 0;
+}
+
+..category-item:nth-child(7) {
+margin-bottom: 0;
 }
