--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,11 @@ img {
 
 .hero {
   background-color: var(--secondary-background-color);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/hero_bgr_img.jpg);
   padding: 188px 0px;
 }
 
